# forex_webscraper

./: .env  .gitignore  Cargo.toml  README.md  db-docker-compose.yml  notee.txt
migration/: Cargo.toml
migration/src/: lib.rs  m20240309_235049_forex_factory_news.rs
src/: lib.rs  main.rs
src/crawler/: forex_factory.rs  headless_browser.rs  mod.rs
src/models/: forex_factory_news.rs  mod.rs  prelude.rs
